# sicalc

./: CMakeLists.txt  README.md  main.c  test.c
include/sicalc/: sicalc.h  sicalc_tools.h
src/: operators.h  sicalc.c  sicalc_tools.h
